styles/style.css
* {
  box-sizing: border-box;
}

.page {
  min-width: 1100px;
  /* мы ещё не умеем делать мобильную версию сайта, */
  /* поэтому выше установлена минимальная ширина страницы */
  max-width: 1600px;
  /* выше установили ограничение по максимальной ширине */
  margin: 0 auto;
  /* выше для экранов больше 1600px отцентрировали весь контент */
  font-family: 'Helvetica Neue', Arial, sans-serif;
}

.header {
  display: flex;
  height: 100vh;
  min-height: 600px;
  max-height: 756px;
  background-color: #f2f2f2;
  position: relative;
  /* выше установили ограничения для секции */
}

.header__title {
  align-self: center;
  width: 730px;
  line-height: 96px;
  font-size: 102px;
  font-weight: 600;
}

.header__title_place_header {
  margin-left: 64px;
  z-index: 1;
}

.header__subtitle {
  width: 388px;
  line-height: 25px;
  font-size: 18px;
}

.header__subtitle_place_header {
  position: absolute;
  bottom: 30px;
  left: 64px;
}

.header__link {
  text-decoration: none;
}

.logo {
  display: block;
  width: 183px;
  height: 32px;
}

.logo_place_header {
  top: 30px;
  left: 64px;
  position: absolute;
}

/* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
.header__square-pic {
  height: 568px;
  width: 568px;
  background: #2f80ed;
}

.header__square-pic_place_header {
  position: absolute;
  top: 64px;
  right: 0;
}

.header__main-illustration {
  width: 765px;
  height: 608px;
  background-image: url(../images/header-image.png);
  background-size: cover;
  background-repeat: no-repeat;
}

.header__main-illustration_place_header {
  position: absolute;
  right: 0;
  bottom: 0;
}

/* и элемента с модификатором вида ключ-значение */
.table__cell_theme_dark {
  width: 200px;
  color: white;
  margin-right: 0;
  margin-top: 80px;
}

